--- a/doc.tex
+++ b/doc.tex
@@ -18,4 +18,6 @@
 	\addcontentsline{toc}{chapter}{Список использованных источников}
 	\renewcommand\bibname{Список использованных источников}
 	\bibliography{biblio}
+	\input{src/listing.tex}
+	\input{src/logs.tex}
 \end{document}
