--- a/docrequires.sty
+++ b/docrequires.sty
@@ -26,6 +26,7 @@
 \RequirePackage{afterpage}
 \RequirePackage{titletoc,tocloft}
 \RequirePackage{multirow}
+\RequirePackage{listings}
 
 \usepackage{blindtext}
 \endinput
