--- a/src/listing.tex
+++ b/src/listing.tex
@@ -1,2 +1,6 @@
 \chapter*{Приложение А}\addcontentsline{toc}{chapter}{Приложение А Листинги программ}
-\centering{Листинги программ}
+\centerline{Листинги программ}
+
+Обход возможных вариантов обработки запроса:
+\input{src/src/pl_sim_code.tex}
+
