--- a/src/logs.tex
+++ b/src/logs.tex
@@ -1,2 +1,2 @@
 \chapter*{Приложение Б}\addcontentsline{toc}{chapter}{Приложение Б Журналы выполнения программ}
-\centering{Журналы выполнения программ}
+\centerline{Журналы выполнения программ}
