Add code and log

--- a/src/listing.tex
+++ b/src/listing.tex
@@ -1,6 +1,9 @@
 \chapter*{Приложение А}\addcontentsline{toc}{chapter}{Приложение А Листинги программ}
 \centerline{Листинги программ}
 
+Основной файл, инициализация логического вывода:
+\input{src/src/pl_main_code.tex}
+
 Обход возможных вариантов обработки запроса:
 \input{src/src/pl_sim_code.tex}
 
