--- a/src/logs.tex
+++ b/src/logs.tex
@@ -1,2 +1,9 @@
 \chapter*{Приложение Б}\addcontentsline{toc}{chapter}{Приложение Б Журналы выполнения программ}
 \centerline{Журналы выполнения программ}
+
+Журнал, отражающий выполнение программы от старта до завершения:
+\input{src/src/pl_main_log.tex}
+
+\newpage
+Часть результата журналирования, в котором отражен обход возможных вариантов обработки запроса:
+\input{src/src/pl_sim_log.tex}
