--- a/docsettings.sty
+++ b/docsettings.sty
@@ -77,7 +77,7 @@
 	\setlength{\leftskip}{0pt}
 }\makeatother
 
-\lstset{basicstyle=\linespread{0.8}\scriptsize\ttfamily,breaklines=true}
+\lstset{basicstyle=\linespread{0.8}\footnotesize\ttfamily,breaklines=true}
 % \lstset{framextopmargin=50pt,frame=bottomline}
 
 \endinput
