Add python desc

--- a/src/listing.tex
+++ b/src/listing.tex
@@ -1,6 +1,9 @@
 \chapter*{Приложение А}\addcontentsline{toc}{chapter}{Приложение А Листинги программ}
 \centerline{Листинги программ}
 
+Листинг реализации на SimPy:
+\input{src/src/py_main_code.tex}
+
 Основной файл, инициализация логического вывода:
 \input{src/src/pl_main_code.tex}
 
