--- a/src/domainknowledge/requirements.tex
+++ b/src/domainknowledge/requirements.tex
@@ -15,7 +15,7 @@
 	Наиболее распространенный алгоритм должен предполагать:
 		\begin{itemize}
 			\item[--] исключение направления на этаж вызова более одной кабины;
-			\item[--] выполнение вызова на определенный этаж назначается идущей в нужном направлении не полностью загруженной кабине. Если таковой нет, ближайшей свободной кабине;
+			\item[--] выполнение вызова на определенный этаж назначается идущей в нужном направлении не полностью загруженной кабине. Если таковой нет, ближайшей свободной кабины;
 			\item[--] автоматическое направление первой из освободившихся кабин на этаж наибольшего спроса (обычно - первый), а остальные кабины после освобождения остаются на этажах, на которых они пришли по приказам.
 		\end{itemize}
 	
