--- a/doc.tex
+++ b/doc.tex
@@ -16,7 +16,7 @@
 	\newpage
 	\bibliographystyle{/home/groot/latex/utf8gost705u}
 	\addcontentsline{toc}{chapter}{Список использованных источников}
-	\renewcommand\bibname{Список использованных источников}
+	\renewcommand\bibname{\centerline{Список использованных источников}}
 	\bibliography{biblio}
 	\input{src/listing.tex}
 	\input{src/logs.tex}
