--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter*{Заключение}\addcontentsline{toc}{chapter}{Заключение}
+\schap{Заключение}
 
 	Несмотря на тот факт, что более сложные решения в управлении лифтовыми группами нуждаются в большом объёме ресурсов,
 		интеллектуальные системы управления позволяют своевременно справляться с пассажиропотоком в среде с быстро
