--- a/src/domainknowledge/structure.tex
+++ b/src/domainknowledge/structure.tex
@@ -38,7 +38,7 @@
 
 		Кабина состоит из пола, стен, потолка, панелей управления. Она может быть панорамной,
 			самонесущей, каркасной. В верхней части кабины установлены устройства безопасности
-			-- "ловители плавного торможения", устройства подвески кабины, привод дверей.
+			-- уловители плавного торможения", устройства подвески кабины, привод дверей.
 			Внутри кабины лифта предусмотрен приказной пост (кнопочное управление для
 			направления лифта на необходимый этаж), электронное табло с указателями,
 			датчики положения дверей, элементы освещения и вентиляторы.
@@ -66,7 +66,7 @@
 			существенного влияния на кинематику системы. В зданиях высокой этажности длина троса может
 			составлять несколько сот метров и его массой пренебречь уже не представляется возможным.
 			При этом во время движения кабины лифта масса кабины (кабины с тросом) и масса противовеса изменяется,
-			поскольку сокращаются или увели- чиваются соответствующие участки троса.
+			поскольку сокращаются или увеличиваются соответствующие участки троса.
 			Система становится разбалансированной. Решением данной проблемы является применение
 			компенсационных тросов, которые соединяют противовес и кабину в нижней части. 
 
