--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,4 +1,4 @@
-\chapter*{Введение}\addcontentsline{toc}{chapter}{Введение}
+\ichap{Введение}
 	На сегодняшний день неотъемлемой частью технического оснащения практически любого здания
 		является подъемное устройство. Это может быть эскалатор, подъемная платформа,
 		но самым распространенным оборудованием является лифт.
@@ -38,7 +38,7 @@
 
 	Относительно типа привода подъемного механизма лифты подразделяются на электрические
 		(с приводом от электродвигателя пе­ременного или постоянного тока)
-		и гидравлические (с приводом в виде подъемного гидроцилиндра или лебедки с гидродвига­телем вращательного типа).
+		и гидравлические (с приводом в виде подъемного гидроцилиндра или лебедки с гидродвигателем вращательного типа).
 
 	В устройстве лифта важна не только механика и принцип движения кабины в пространстве,
 		но также и способы реагирования лифта на поступающие от пользователей запросы.
