--- a/src/listing.tex
+++ b/src/listing.tex
@@ -1,4 +1,4 @@
-\chapter*{Приложение А}\addcontentsline{toc}{chapter}{Приложение А Листинги программ}
+\newpage\centerline{Приложение А}\addcontentsline{toc}{chapter}{Приложение А Листинги программ}
 \centerline{Листинги программ}
 
 Листинг реализации на SimPy:
