--- a/src/logs.tex
+++ b/src/logs.tex
@@ -1,4 +1,4 @@
-\chapter*{Приложение Б}\addcontentsline{toc}{chapter}{Приложение Б Журналы выполнения программ}
+\newpage\centerline{Приложение Б}\addcontentsline{toc}{chapter}{Приложение Б Журналы выполнения программ}
 \centerline{Журналы выполнения программ}
 
 Журнал, отражающий выполнение программы от старта до завершения:
