--- a/src/project/results.tex
+++ b/src/project/results.tex
@@ -43,6 +43,6 @@
 		получен большой прирост прирост в производительности.
 
 	Таким образом, разработав данное программное решение, была получена платформа для разработки
-		новых программных решений. Где можно будет выделить у данной системы два блока, с которыми
+		новых программных решений, где можно будет выделить у данной системы два блока, с которыми
 		будет возможно вести независимую разработку. Это позволит ускорить процесс развития данной системы
 		и появится возможность заменять эти блоки на более сложные решения.
