--- a/src/project/tools.tex
+++ b/src/project/tools.tex
@@ -45,7 +45,7 @@
 			Эти предикаты позволяют использовать другие предикаты в качестве глобальных переменных, что
 			позволяет существенно упростить написание правил для вычисления.
 
-		SWI-Prolog — это свободная (открытая) реализация языка программирования Prolog, часто используемая для преподавания и приложений Semantic Web. Эта реализация представляет богатый набор возможностей, библиотеки для constraint logic programming, многопоточности, юнит-тестирования, интерфейс к языку программирования Java, ODBC и т. д., поддерживает литературное программирование, содержит реализацию веб-сервера, библиотеки для SGML, RDF, RDFS.
+		SWI-Prolog — это свободная (открытая) реализация языка программирования \\ Prolog, часто используемая для преподавания и приложений Semantic Web. Эта реализация представляет богатый набор возможностей, библиотеки для constraint logic programming, многопоточности, юнит-тестирования, интерфейс к языку программирования Java, ODBC и т. д., поддерживает литературное программирование, содержит реализацию веб-сервера, библиотеки для SGML, RDF, RDFS.
 
 \subsection{SimPy}
 
