--- a/title.tex
+++ b/title.tex
@@ -14,7 +14,7 @@
 	\vspace{28pt}
 	\begin{flushleft}
 		\begin{tabular}{p{0.47\textwidth}l}
-								&  К ЗАЩИТЕ ДОПУСКАЮ				\\
+								&  К ЗАЩИТЕ ДОПУСКАЮ				\\ [7pt]
 								&  	зав. кафедрой «ИСиЗИ»			\\
 								&  	д.т.н., доцент Аршинский Л.В.	\\
 		\end{tabular}
@@ -32,15 +32,15 @@
 	\vspace{35pt}
 	\begin{flushleft}
 		\begin{tabular}{p{0.47\textwidth}l}
-			КОНСУЛЬТАНТ					&  РУКОВОДИТЕЛЬ ПРОЕКТА		\\
-			по нормоконтролю			&  ст. пр. Звонков И.В.		\\
-			к.т.р. доцент Матиенко Л.В.	&  							\\
+			КОНСУЛЬТАНТ					&  РУКОВОДИТЕЛЬ РАБОТЫ		\\ [7pt]
+			по нормоконтролю			&  Звонков И.В.		\\
+			к.т.н. доцент Матиенко Л.В.	&  							\\
 		\end{tabular}
 	\end{flushleft}
 	\vspace{35pt}
 	\begin{flushleft}
 		\begin{tabular}{p{0.47\textwidth}l}
-								&  ИСПОЛНИТЕЛЬ				\\
+								&  ИСПОЛНИТЕЛЬ				\\ [7pt]
 								&  студент группы ПИм.1-16-1\\
 								&  Арляпов С.В.				\\
 		\end{tabular}
