--- a/src/tables/projectt2.tex
+++ b/src/tables/projectt2.tex
@@ -1,6 +1,6 @@
 {
 \changefontsizes[12pt]{12pt}
-\captionsetup{font=large,margin=21pt}
+\captionsetup{font=large,margin=10mm}
 
 \vspace{14pt}
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip+35pt}p{0.15\textwidth}|@{\hskip+35pt}p{0.15\textwidth}|@{\hskip+35pt}p{0.15\textwidth}|}
