--- a/src/domainknowledge/algorithms.tex
+++ b/src/domainknowledge/algorithms.tex
@@ -4,7 +4,35 @@
 		реализующих различные режимы работы системы управления (ревизии, деблокировки,
 		управления из машинного помещения, нормальной работы, пожарной опасности),
 		и алгоритмов дополнительных подпрограмм, реализующих типовые действия,
-		производимые в режиме нормальной работы (движение лифта по приказу, остановка кабины на этаже).
+		производимые в режиме нормальной работы (движение лифта по приказу, остановка кабины на этаже).Алгоритм работы системы управления представлен на рисунке \ref{dk3}.
+        
+        \begin{figure}[h]
+				\centering
+				\includegraphics[width=80mm]{src/pictures/algoritm_raboti_sistemi_upravlenia.jpg}
+				\caption{Алгоритм работы системы управления}\label{dk3}
+        \end{figure}
+		% Рис. 3 - Алгоритм работы системы управления
+        
+    Алгоритм начинается с включения лифта и работу (блок 1), после чего начинается постоянный контроль цепи безопасности (2). Если        цепь разомкнута, происходит аварийная остановка лифта (3). В зависимости от причины аварийной остановки применяется режим        деблокировки (5), если кабина лифта установилась на ловители или конечные выключатели, либо производится определение и            устранение другого рода сбоя в системе (6). Блоки 7...9 определяют необходимость включения того или иного режима работы          лифта, блоки 10...12 реализуют соответствующие подпрограммы. Программа продолжает свою работу до тех пор, пока не будет          выполнен принудительный останов лифта.
+    Схема алгоритма подпрограммы, реализующей режим нормальной работы, приведена на рисунке \ref{dk4}.
+    
+     \begin{figure}[h]
+				\centering
+				\includegraphics[width=80mm]{src/pictures/algoritm_raboti_podprogrammi.jpg}
+				\caption{Алгоритм подпрограммы}\label{dk4}
+        \end{figure}
+		% Рис. 4 - Схема алгоритма подпрограммы, реализующей режим нормальной работы
+        
+    В этом режиме производятся контроль пожарной безопасности (2), регистрация и выполнение всех вызовов и приказов, контроль              загруженности кабины. Этот алгоритм составлен с учетом работы системы с собирательным управлением вниз, т.е. выполняются          попутные вызовы при движении кабины вниз (если загрузка менее 90 \% от номинальной), Таким образом, в подпрограмме                реализуются ожидание и регистрация вызова (3, 4), проверка нахождения кабины лифта на этаже вызова (5). В зависимости от          этого осуществляется открытие дверей кабины с последующей работой лифта по приказу (6, 7) или проверяется условие занятости      кабины (8). Если кабина свободна, то блоки 9-20 осуществляют выбор направления движения кабины и в зависимости от этого          после получения приказа выполняются попутные вызовы при движении вниз (если они зарегистрированы) (14-20)или движение          кабины на наивысший из этажей, с которых поступили вызовы, а затем после получения приказа собирательное управление для          движения вниз.
+
+    Если при регистрации вызова кабина занята, вызов выполняется при попутном следовании кабины при условии, что она загружена            менее чем на 90 \% номинальной загрузки. В противном случае, представленном на рисунке \ref{dk5}, ожидают, пока кабина не          освободится или не проследует в попутном направлении, загруженная менее чем на 90 \% (21-29).
+    
+    \begin{figure}[h]
+				\centering
+				\includegraphics[width=90mm]{src/pictures/image5.jpg}
+				\caption{Алгоритм при загрузке кабины более чем на 90 \%}\label{dk5}
+    \end{figure}
+		% Рис. 5 - Схема работы алгоритма при загрузке кабины более чем на 90 \% номинальной нагрузки
 
 	Система управления лифтом обеспечивает выполнение требований пассажиров
 		-- приказы из кабины или запросы с этажей, при этом решая спектр задач,
