--- a/src/domainknowledge/sysmanagement.tex
+++ b/src/domainknowledge/sysmanagement.tex
@@ -22,6 +22,8 @@
 		результаты функционирования привода. Такая система управления дает возможность увеличить точность остановки,
 		повысить плавность движения кабины.
 
+    Замкнутый контур контроля скорости гарантирует точное и комфортное поведение привода в каждый момент работы. Измеренная скорость       электродвигателя вводится в регулятор скорости типа ПИ-регулятора. Динамическая точность регулирования скорости (время             устранения системой регулирования ошибки по скорости) высока.
+    
 	По видам функционального управления движением кабины лифты подразделяются на следующие типы:
 		\begin{itemize}
 			\item[--] внутренняя кнопочная система, осуществляющая вызов пустой кабины на любой этаж;
@@ -35,6 +37,15 @@
 				с попутными остановками по вызову при движении кабины  в любом направлении,
 				а также с использованием группового управления.
 		\end{itemize}
+        
+    Для пользовательского управления движением кабины лифта ипользуются кнопочные посты управления - вызывной и приказной пост.             Внешний вид постов управления представлен на рисунке \ref{dk2}.
+    
+     \begin{figure}[h]
+				\centering
+				\includegraphics[width=90mm]{src/pictures/posti_upravlenia.jpg}
+				\caption{Вызывной пост (слева) и приказной пост (справа)}\label{dk2}
+    \end{figure}
+		% Рис. 2 - Вызывной пост (слева) и приказной пост (справа)
 
 	Самый простой вид управления, осуществляющий вызов пустой кабины на любой этаж,
 		применяется для пассажирских лифтов грузоподъемностью до 320 кг,
